--- a/src/sample/login.fxml
+++ b/src/sample/login.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Pane layoutX="-5.0" prefHeight="400.0" prefWidth="274.0" style="-fx-background-color: #f06292;">
          <children>
@@ -46,7 +45,7 @@
             <Image url="@../image/icons8_Password_50px.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="btnLogin" layoutX="329.0" layoutY="200.0" prefHeight="31.0" prefWidth="144.0" style="-fx-background-color: #f06292;" text="Login">
+      <JFXButton fx:id="btnLogin" layoutX="329.0" layoutY="200.0" onAction="#Login" prefHeight="31.0" prefWidth="144.0" style="-fx-background-color: #f06292;" text="Login">
          <font>
             <Font size="22.0" />
          </font>
