--- a/src/Admin/AdminDashBoard.fxml
+++ b/src/Admin/AdminDashBoard.fxml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Admin.AdminController">
+   <children>
+      <TabPane layoutX="1.0" prefHeight="494.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Manage Student">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Pane prefHeight="466.0" prefWidth="239.0" style="-fx-background-color: #69e2ff;" />
+                        <TableView fx:id="studentTable" layoutX="239.0" layoutY="50.0" prefHeight="381.0" prefWidth="409.0">
+                          <columns>
+                            <TableColumn fx:id="idcolumn" prefWidth="75.0" text="ID" />
+                            <TableColumn fx:id="firstnamecolumn" prefWidth="91.0" text="Firstname" />
+                              <TableColumn fx:id="lastnamecolumn" prefWidth="74.0" text="Lastname" />
+                              <TableColumn fx:id="emailcolumn" prefWidth="76.0" text="Email" />
+                              <TableColumn fx:id="dobcolumn" prefWidth="81.0" text="Date of Birth" />
+                          </columns>
+                        </TableView>
+                        <JFXTextField fx:id="searchTxt" layoutX="310.0" layoutY="7.0" prefHeight="32.0" prefWidth="235.0" promptText="search" />
+                        <Label layoutX="255.0" layoutY="15.0" text="Search" />
+                        <Button fx:id="btnLoad" layoutX="247.0" layoutY="431.0" mnemonicParsing="false" onAction="#loadStudentData" text="Load Data" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Help?">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </children>
+</Pane>
